* Change slot semantics so that it keeps along with it a shown 
  representation of any default value. This will allow us to show these
  defaults during analysis, but won't get in the way of fmapping our way out
  of the Show Hask subcategory.
* Provide a Slot type which has forgotten its default value.

---

* Massive overhaul of the test suite. What's especially important about
  this is it lays plans for each type which FromEnv should instantiate.

---

* Created the Slot type which expands upon the idea that we reference
  environment variables by names with information about default values 
  or documentation.

  * Provides a lensy interface for building slots.

---

* Added the parsing of Heroku-style database connections

---

* Added a class of environment parseable values which Env.get tries to 
  deserialize to.
  * Includes String, ByteString, and Text 
  * Includes many numeric types
  * Includes Haskell values (parse with 'read')
  * Includes JSON values (parse with 'json')

---

* Generalized the error conditions on parser failure to include a parsing error
  This is there things get interesting!

---

* Changed the basic Env.get to work over ByteStrings instead of Strings
  * We'll eventually get basic String behavior back again, but we drop it
    for a bit so that we can build faster parsers
  * Reimplemented Example and Spec to use this new format

---

* Added a convenience destructor collMay for converting Maybes to Collects.
  * Used this to simplify implementation of both Env.parse and Env.test.

---

* Quickly implemented a mock interpreter for testing using the new
  free applicative interpreter mode.

---

* Vastly simplified the free applicative interpreters of Env.parse and 
  Env.deps by using FreeA's raise and some well-chosen basic Applicatives
  * Included two basic applicatives 
    * Collect --- the "purely applicative sum"
    * Compose --- right-to-left functor composition

---
