@@ -53,6 +53,7 @@ library
                      , scientific
                      , text
                      , unix
+                     , wl-pprint
 
   hs-source-dirs:      src
   default-language:    Haskell2010
